--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,5 +21,10 @@
 - import_tasks: service.yml
   tags: ['zabbix-agent', 'zabbix-agent-service']
 
+- include_tasks: register.yml
+  when: zabbix_agent__register|bool
+  tags: ['zabbix-agent', 'zabbix-agent-register']
+
 - include_tasks: facts.yml
   when: zabbix_agent__facts|bool
+  tags: ['zabbix-agent', 'zabbix-agent-facts']
