--- a/tasks/monitoring-zabbix.yml
+++ b/tasks/monitoring-zabbix.yml
@@ -8,12 +8,12 @@
     zabbix_common__userparameter:
       name: common
       userparameter:
-        - key: conntrack_count
+        - key: conntrack.count
           command: >
             /bin/bash -c "if [ -f /proc/net/ip_conntrack ]; then wc -l /proc/net/ip_conntrack | awk '{print $1}'; else echo -n 0; fi"
           sudo: True
           comment: 'fetch current conntrack size'
-        - key: conntrack_max
+        - key: conntrack.max
           command: >
             /bin/bash -c "VALUE=$(/sbin/sysctl net.ipv4.netfilter.ip_conntrack_max --ignore | awk '{print $3}'); echo ${VALUE:-0}"
           sudo: True
