--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -5,3 +5,8 @@
     that:
       - 1024 <= zabbix_agent__listen_port and zabbix_agent__listen_port <= 32767
       - 0 <= zabbix_agent__log_size and zabbix_agent__log_size <= 1024
+      - 0 <= zabbix_agent__debug_level and zabbix_agent__debug_level <= 5
+      - zabbix_agent__unsafe_userparameters in [0, 1]
+      - zabbix_agent__enable_rmeote_commands in [0, 1]
+      - zabbix_agent__log_remote_commands in [0, 1]
+      - 1 <= zabbix_agent__timeout and zabbix_agent__timeout <= 30
