--- a/tasks/monitoring-zabbix.yml
+++ b/tasks/monitoring-zabbix.yml
@@ -1,5 +1,13 @@
 ---
 
+- name: Install block device discovery script file
+  copy:
+    src:   devices.discovery.py
+    dest:  "{{ zabbix_agent__custom_scripts_directory|d('/opt/zabbix-agent-scripts') }}/common_devices_discovery.py"
+    owner: root
+    group: root
+    mode:  0755
+
 - name: Configure zabbix userparameters
   include_role:
     name: zabbix-common
@@ -18,4 +26,7 @@
             /bin/bash -c "VALUE=$(/sbin/sysctl net.ipv4.netfilter.ip_conntrack_max --ignore | awk '{print $3}'); echo ${VALUE:-0}"
           sudo: True
           comment: 'fetch maximum size of conntrack'
+        - key: devices.discovery
+          command: "{{ zabbix_agent__custom_scripts_directory|d('/opt/zabbix-agent-scripts') }}/common_devices_discovery.py{% for e in zabbix_agent__common_devices_discovery_excludes %} --exclude {{ e }}{% endfor %}"
+          comment: 'discovery for block devices'
       state: present
