rename disk discovery

--- a/tasks/monitoring-zabbix.yml
+++ b/tasks/monitoring-zabbix.yml
@@ -26,7 +26,7 @@
             /bin/bash -c "VALUE=$(/sbin/sysctl net.ipv4.netfilter.ip_conntrack_max --ignore | awk '{print $3}'); echo ${VALUE:-0}"
           sudo: True
           comment: 'fetch maximum size of conntrack'
-        - key: devices.discovery
+        - key: disk.discovery
           command: "{{ zabbix_agent__custom_scripts_directory|d('/opt/zabbix-agent-scripts') }}/common_devices_discovery.py{% for e in zabbix_agent__common_devices_discovery_excludes %} --exclude {{ e }}{% endfor %}"
           comment: 'discovery for block devices'
       state: present
