add utils user params

--- a/tasks/monitoring-zabbix.yml
+++ b/tasks/monitoring-zabbix.yml
@@ -8,7 +8,25 @@
     group: root
     mode:  0755
 
-- name: Configure zabbix userparameters
+- name: Add utilies userparameters
+  include_role:
+    name: zabbix-common
+    tasks_from: userparameter
+  vars:
+    zabbix_common__userparameter:
+      name: utils
+      userparameter:
+        - key: common.curl[*]
+          command: >
+            curl $3 --silent --write-out '|%{http_code}' "$1"
+            | awk -F'|'
+            'function in_array(it, arr, x, y) { for (x in arr) y[arr[x]]; return it in y }
+            BEGIN{  codes="$2"; if ( length(codes) == 0 ) { codes="200" }; split(codes, http_codes);  }
+            {  if ( in_array($$2, http_codes) ) { print $$1 }  }'
+          comment: $1 the url, $2 optional space separated list of success http codes, $3 optionnal parameter to pass to curl command
+      state: present
+
+- name: Add common userparameters
   include_role:
     name: zabbix-common
     tasks_from: userparameter
