add package install

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,9 @@
 - import_tasks: init.yml
   tags: ['always']
 
+- import_tasks: install.yml
+  tags: ['zabbix-agent', 'zabbix-agent-install']
+
 - import_tasks: configure.yml
   tags: ['zabbix-agent', 'zabbix-agent-configure']
 
