--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,10 @@ zabbix_agent__facts: False
 # Which version to install (if it is possible)
 zabbix_agent__version: 3.4
 
+# List of required packages to install
+zabbix_agent__packages_name:
+  - curl
+
 # Name of zabbix service
 zabbix_agent__service_name: zabbix-agent
 
