fix raspbian version

--- a/vars/Raspbian.yml
+++ b/vars/Raspbian.yml
@@ -1,3 +1,7 @@
 ---
 
-zabbix_agent__version: '{{ 3.0 if zabbix_agent__packages_allow_backports|d(False) else 2.2 }}'
+zabbix_agent__version: '{{
+      (3.0)
+  if zabbix_agent__packages_allow_backports|d(False)
+  else
+      (2.2 if ansible_distribution_release == "jessie" else 3.0) }}'
