retag common tasks

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,7 +19,7 @@
   include_role:
     name: apt-backports
   when: ansible_distribution_release in ['jessie'] and zabbix_agent__packages_allow_backports|bool
-  tags: ['always']
+  tags: ['zabbix-agent', 'zabbix-agent-install']
 
 - name: Run zabbix-common
   import_role:
@@ -34,7 +34,7 @@
     zabbix_common__conf_directory: '{{ zabbix_agent__conf_directory }}'
     zabbix_common__var_directory: '{{ zabbix_agent__var_directory }}'
     zabbix_common__log_directory: '{{ zabbix_agent__log_directory }}'
-  tags: ['always']
+  tags: ['zabbix-agent', 'zabbix-agent-install']
 
 - import_tasks: install.yml
   tags: ['zabbix-agent', 'zabbix-agent-install']
