--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -10,14 +10,19 @@
   with_items:
     - '{{ zabbix_agent__conf_include_directory }}'
     - '{{ zabbix_agent__userparameters_directory }}'
+    - '{{ zabbix_agent__userparameters_conf_directory }}'
 
 - name: Secure userparameters files
   file:
-    path:    '{{ zabbix_agent__userparameters_directory }}'
+    path:    '{{ item }}'
     owner:   '{{ zabbix_agent__service_user }}'
     group:   '{{ zabbix_agent__service_group }}'
+    mode:    u=rwX,g=rX,o=---
     recurse: yes
     state:   directory
+  with_items:
+    - '{{ zabbix_agent__userparameters_directory }}'
+    - '{{ zabbix_agent__userparameters_conf_directory }}'
 
 - name: Create custom scripts directory
   file:
