--- a/tasks/monitoring-zabbix.yml
+++ b/tasks/monitoring-zabbix.yml
@@ -9,9 +9,7 @@
     mode:  0755
 
 - name: Add utilies userparameters
-  include_role:
-    name: zabbix-agent
-    tasks_from: userparameter
+  include_tasks: userparameter.yml
   vars:
     zabbix_agent__userparameter:
       name: utils
@@ -28,9 +26,7 @@
       state: present
 
 - name: Add common userparameters
-  include_role:
-    name: zabbix-agent
-    tasks_from: userparameter
+  include_tasks: userparameter.yml
   vars:
     zabbix_agent__userparameter:
       name: common
