move types into types dir

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -55,7 +55,7 @@
 - name: Configure sudoers rights for zabbix-agent
   include_role:
     name: sudoers
-    tasks_from: sudo_rule
+    tasks_from: types/sudo_rule
   vars:
     sudoers__sudo_rule:
       name: zabbix_agent_01
