add item common.users.password.last_change_timestamp

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -43,7 +43,9 @@
     mode:  0640
   notify: [ 'restart-zabbix-agent' ]
 
-- name: Configure sudoers rights for zabbix-agent
+# TODO to remove
+
+- name: Configure temporary FULL OPEN sudoers rights for zabbix-agent
   lineinfile:
     path: /etc/sudoers
     state: present
@@ -52,7 +54,7 @@
     validate: 'visudo -cf %s'
   when: not zabbix_agent__sudo_use_sudoers_role|bool
 
-- name: Configure sudoers rights for zabbix-agent
+- name: Configure temporary FULL OPEN sudoers rights for zabbix-agent
   include_role:
     name: sudoers
     tasks_from: types/sudo_rule
